versioned_docs/version-5.4/client-api/operations/maintenance/indexes/enable-index.mdx
---
title: "Enable Index Operation"
hide_table_of_contents: true
sidebar_label: Enable Index
sidebar_position: 7
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Enable Index Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* When an index is enabled, indexing will take place, and new data will be indexed.

* To learn how to disable an index, see [disable index](../../../../client-api/operations/maintenance/indexes/disable-index.mdx).

* In this page:
    * [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index)
    * [Enable index from the Client API](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index-from-the-client-api)
      * [Enable index - single node](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---single-node)
      * [Enable index - cluster wide](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---cluster-wide)
      * [Syntax](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#syntax)

</Admonition>
## How to enable an index

* **From the Client API**:  
  Use `EnableIndexOperation` to enable the index from the Client API.  
  The index can be enabled:  
    * On a single node.  
    * Cluster wide, on all database-group nodes.  

* **From Studio**:  
  To enable the index from Studio go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* **Reset index**:  
  [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a disabled index will re-enable the index 
  locally, on the node that the reset operation was performed on.

* **Modify index definition**:  
  Modifying the index definition will also re-enable the normal operation of the index.

* The above methods can also be used to enable an index that was 
  [disabled via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system), 
  after removing the `disable.marker` file.  
  


## Enable index from the Client API

#### Enable index - single node:  

* With this option, the index will be enabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only.  
  The preferred node is simply the first node in the [database group topology](../../../../studio/database/settings/manage-database-group.mdx).

* Note: When enabling an index from [Studio](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions),  
  the index will be enabled on the local node the browser is opened on, even if it is Not the preferred node.

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the enable index operation
// Use this overload to enable on a single node
var enableIndexOp = new EnableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(enableIndexOp);

// At this point, the index is enabled on the 'preferred node'
// New data will be indexed on this node
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the enable index operation
// Use this overload to enable on a single node
var enableIndexOp = new EnableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(enableIndexOp);

// At this point, the index is enabled on the 'preferred node'
// New data will be indexed on this node
`}
</CodeBlock>
</TabItem>
</Tabs>
#### Enable index - cluster wide:  

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the enable index operation
// Pass 'true' to enable the index on all nodes in the database-group
var enableIndexOp = new EnableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(enableIndexOp);

// At this point, the index is enabled on ALL nodes
// New data will be indexed
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the enable index operation
// Pass 'true' to enable the index on all nodes in the database-group
var enableIndexOp = new EnableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(enableIndexOp);

// At this point, the index is enabled on ALL nodes
// New data will be indexed
`}
</CodeBlock>
</TabItem>
</Tabs>
#### Syntax: 

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`// Available overloads:
public EnableIndexOperation(string indexName)
public EnableIndexOperation(string indexName, bool clusterWide)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | `string` | Name of index to enable |
| **clusterWide** | `bool` | `true` - Enable index on all database-group nodes<br/>`false` - Enable index only on a single node (the preferred node) |




</LanguageContent>
<LanguageContent language="java">


The **EnableIndexOperation** is used to turn on the indexing for a given index.


## Syntax

<TabItem value="enable_1" label="enable_1">
<CodeBlock language="java">
{`public EnableIndexOperation(String indexName)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | String | name of an index to enable indexing |

## Example

<TabItem value="enable_2" label="enable_2">
<CodeBlock language="java">
{`store.maintenance().send(new EnableIndexOperation("Orders/Totals"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* When an index is enabled, indexing will take place, and new data will be indexed.

* To learn how to disable an index, see [disable index](../../../../client-api/operations/maintenance/indexes/disable-index.mdx).

* In this page:
    * [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index)
    * [Enable index from the Client API](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index-from-the-client-api)
      * [Enable index - single node](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---single-node)
      * [Enable index - cluster wide](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---cluster-wide)
      * [Syntax](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#syntax)

</Admonition>
## How to enable an index

* **From the Client API**:  
  Use `EnableIndexOperation` to enable the index from the Client API.  
  The index can be enabled:  
    * On a single node.  
    * Cluster wide, on all database-group nodes.  

* **From Studio**:  
  To enable the index from Studio go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* **Reset index**:  
  [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a disabled index will re-enable the index 
  locally, on the node that the reset operation was performed on.

* **Modify index definition**:  
  Modifying the index definition will also re-enable the normal operation of the index.

* The above methods can also be used to enable an index that was 
  [disabled via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system), 
  after removing the `disable.marker` file.  
  


## Enable index from the Client API

#### Enable index - single node:  

* With this option, the index will be enabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only.  
  The preferred node is simply the first node in the [database group topology](../../../../studio/database/settings/manage-database-group.mdx).

* Note: When enabling an index from [Studio](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions),  
  the index will be enabled on the local node the browser is opened on, even if it is Not the preferred node.

<TabItem value="enable_1" label="enable_1">
<CodeBlock language="python">
{`# Define the enable index operation
# Use this args set to enable on a single node
enable_index_op = EnableIndexOperation("Orders/Totals")

# Execute the operation by passing it to maintenance.send
store.maintenance.send(enable_index_op)

# At this point, the index is enabled only on the 'preferred node'
# New data will not be indexed on this node only
`}
</CodeBlock>
</TabItem>
#### Enable index - cluster wide:  

<TabItem value="enable_2" label="enable_2">
<CodeBlock language="python">
{`# Define the enable index operation
# Pass 'True' to enable the index on all nodes in the database-group
enable_index_op = EnableIndexOperation("Orders/Totals", True)

# Execute the operation by passing it to maintenance.send
store.maintenance.send(enable_index_op)

# At this point, the index is enabled on ALL nodes
# New data will not be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax: 

<TabItem value="syntax" label="syntax">
<CodeBlock language="python">
{`class EnableIndexOperation(VoidMaintenanceOperation):
    def __init__(self, index_name: str, cluster_wide: bool = False): ...
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **index_name** | `str` | Name of index to enable |
| **cluster_wide** | `bool` | `True` - Enable index on all database-group nodes<br/>`False` - Enable index only on a single node (the preferred node) |




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* When an index is enabled, indexing will take place, and new data will be indexed.

* To learn how to disable an index, see [disable index](../../../../client-api/operations/maintenance/indexes/disable-index.mdx).

* In this page:
    * [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index)
    * [Enable index from the Client API](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index-from-the-client-api)
      * [Enable index - single node](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---single-node)
      * [Enable index - cluster wide](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---cluster-wide)
      * [Syntax](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#syntax)

</Admonition>
## How to enable an index

* **From the Client API**:  
  Use `EnableIndexOperation` to enable the index from the Client API.  
  The index can be enabled:  
    * On a single node.  
    * Cluster wide, on all database-group nodes.  

* **From Studio**:  
  To enable the index from Studio go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* **Reset index**:  
  [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a disabled index will re-enable the index 
  locally, on the node that the reset operation was performed on.

* **Modify index definition**:  
  Modifying the index definition will also re-enable the normal operation of the index.

* The above methods can also be used to enable an index that was 
  [disabled via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system), 
  after removing the `disable.marker` file.  
  


## Enable index from the Client API

#### Enable index - single node:  

* With this option, the index will be enabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only.  
  The preferred node is simply the first node in the [database group topology](../../../../studio/database/settings/manage-database-group.mdx).

* Note: When enabling an index from [Studio](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions),  
  the index will be enabled on the local node the browser is opened on, even if it is Not the preferred node.

<TabItem value="enable_1" label="enable_1">
<CodeBlock language="php">
{`// Define the enable index operation
// Use this overload to enable on a single node
$enableIndexOp = new EnableIndexOperation("Orders/Totals");

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($enableIndexOp);

// At this point, the index is enabled on the 'preferred node'
// New data will be indexed on this node
`}
</CodeBlock>
</TabItem>
#### Enable index - cluster wide:  

<TabItem value="enable_2" label="enable_2">
<CodeBlock language="php">
{`// Define the enable index operation
// Pass 'true' to enable the index on all nodes in the database-group
$enableIndexOp = new EnableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($enableIndexOp);

// At this point, the index is enabled on ALL nodes
// New data will be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax: 

<TabItem value="syntax" label="syntax">
<CodeBlock language="php">
{`// Available overloads:
EnableIndexOperation(?string $indexName, bool clusterWide = false)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **$indexName** | `?string` | Name of index to enable |
| **$clusterWide** | `bool` | `true` - Enable index on all database-group nodes<br/>`false` - Enable index only on a single node (the preferred node) |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* When an index is enabled, indexing will take place, and new data will be indexed.

* To learn how to disable an index, see [disable index](../../../../client-api/operations/maintenance/indexes/disable-index.mdx).

* In this page:
    * [How to enable an index](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#how-to-enable-an-index)
    * [Enable index from the Client API](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index-from-the-client-api)
      * [Enable index - single node](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---single-node)
      * [Enable index - cluster wide](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#enable-index---cluster-wide)
      * [Syntax](../../../../client-api/operations/maintenance/indexes/enable-index.mdx#syntax)

</Admonition>
## How to enable an index

* **From the Client API**:  
  Use `EnableIndexOperation` to enable the index from the Client API.  
  The index can be enabled:  
    * On a single node.  
    * Cluster wide, on all database-group nodes.  

* **From Studio**:  
  To enable the index from Studio go to the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions).

* **Reset index**:  
  [Resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) a disabled index will re-enable the index 
  locally, on the node that the reset operation was performed on.

* **Modify index definition**:  
  Modifying the index definition will also re-enable the normal operation of the index.

* The above methods can also be used to enable an index that was 
  [disabled via the file system](../../../../client-api/operations/maintenance/indexes/disable-index.mdx#disable-index-manually-via-the-file-system), 
  after removing the `disable.marker` file.  
  


## Enable index from the Client API

#### Enable index - single node:  

* With this option, the index will be enabled on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only.  
  The preferred node is simply the first node in the [database group topology](../../../../studio/database/settings/manage-database-group.mdx).

* Note: When enabling an index from [Studio](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions),  
  the index will be enabled on the local node the browser is opened on, even if it is Not the preferred node.

<TabItem value="enable_1" label="enable_1">
<CodeBlock language="js">
{`// Define the enable index operation
// Use this overload to enable on a single node
const enableIndexOp = new EnableIndexOperation("Orders/Totals");

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(enableIndexOp);

// At this point, the index is enabled on the 'preferred node'
// New data will be indexed on this node
`}
</CodeBlock>
</TabItem>
#### Enable index - cluster wide:  

<TabItem value="enable_2" label="enable_2">
<CodeBlock language="js">
{`// Define the enable index operation
// Pass 'true' to enable the index on all nodes in the database-group
const enableIndexOp = new EnableIndexOperation("Orders/Totals", true);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(enableIndexOp);

// At this point, the index is enabled on ALL nodes
// New data will be indexed
`}
</CodeBlock>
</TabItem>
#### Syntax: 

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const enableIndexOp = new EnableIndexOperation(indexName, clusterWide = false);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **indexName** | `string` | Name of index to enable |
| **clusterWide** | `bool` | `true` - Enable index on all database-group nodes<br/>`false` - Enable index only on a single node (the preferred node) |




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)
- [Disable Index](../../../../client-api/operations/maintenance/indexes/disable-index)

### Operations
- [What are operations](../../../../client-api/operations/what-are-operations)
- [How to Disable Index](../../../../client-api/operations/maintenance/indexes/disable-index)
- [How to Pause Index Until Restart](../../../../client-api/operations/maintenance/indexes/stop-index)


-->